--- a/HospitalManagementSystem/Views/Patients/Index.cshtml
+++ b/HospitalManagementSystem/Views/Patients/Index.cshtml
@@ -9,6 +9,12 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<form asp-controller="Patients" asp-action="Index">
+    <p>
+        PatientName: <input type="text" name="searchstr" />
+        <input type="submit" value="Filter" />
+    </p>
+</form>
 <table class="table">
     <thead>
         <tr>
