--- a/HospitalManagementSystem/Views/Home/Index.cshtml
+++ b/HospitalManagementSystem/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
     ViewData["Title"] = "Home Page";
 }
 <link rel="stylesheet" href="~/css/style.css">
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div id="homeh1" class="text-center">
+    <h1 class="display-4">Welcome to the Hospital Management System</h1>
 </div>
+<p>You need to login as authorized admin to access staff management</p>
+<br>
+<p>You need to login as authorized admin/doctor to access patients management</p>
