--- a/HospitalManagementSystem/wwwroot/css/style.css
+++ b/HospitalManagementSystem/wwwroot/css/style.css
@@ -1,4 +1,16 @@
 ﻿h1 {
     font-size: 200px;
-    color: red ;
+    font-weight:bold;
+    color:black;
+}
+p {
+    color:black;
+}
+body {
+    background-image: url("download.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+}
+#homeh1 {
+    height:250px;
 }
