Creation of User and user role done

--- a/HospitalManagementSystem/Views/Staffs/Details.cshtml
+++ b/HospitalManagementSystem/Views/Staffs/Details.cshtml
@@ -44,8 +44,8 @@
             @Html.DisplayNameFor(model => model.aspNetID)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.aspNetID)*@
-        </dd>
+            @Html.DisplayFor(model => model.aspNetID
+        </dd>)*@
     </dl>
 </div>
 <div>
