--- a/HospitalManagementSystem/Views/Staffs/Delete.cshtml
+++ b/HospitalManagementSystem/Views/Staffs/Delete.cshtml
@@ -45,8 +45,8 @@
             @Html.DisplayNameFor(model => model.aspNetID)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.aspNetID)*@
-        </dd>
+            @Html.DisplayFor(model => model.aspNetID)
+        </dd>*@
     </dl>
     
     <form asp-action="Delete">
