--- a/HospitalManagementSystem/Views/Staffs/Edit.cshtml
+++ b/HospitalManagementSystem/Views/Staffs/Edit.cshtml
@@ -33,11 +33,11 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
-            </div>@*
+            </div>
             <div class="form-group">
                 <label asp-for="aspNetID" class="control-label"></label>
                 <input asp-for="aspNetID" class="form-control" />
