--- a/HospitalManagementSystem/Views/Home/Index.cshtml
+++ b/HospitalManagementSystem/Views/Home/Index.cshtml
@@ -2,9 +2,10 @@
     ViewData["Title"] = "Home Page";
 }
 <link rel="stylesheet" href="~/css/style.css">
-<div id="homeh1" class="text-center">
-    <h1 class="display-4">Welcome to BeWell Hospital Management System</h1>
+<div class="text-center">
+    <img id="logoimg" src="~/css/logo.jpg">
+    <h1 id="homeh1" class="display-4">Welcome to BeWell Hospital Management System</h1>
+    <p id="alert">You need to login as authorized user to access staffs and patients management</p>
+
 </div>
-<p>You need to login as authorized admin to access staff management</p>
-<br>
-<p>You need to login as authorized admin/doctor to access patients management</p>
+
