--- a/HospitalManagementSystem/wwwroot/css/style.css
+++ b/HospitalManagementSystem/wwwroot/css/style.css
@@ -7,10 +7,17 @@ p {
     color:black;
 }
 body {
-    background-image: url("download.jpg");
     background-repeat: no-repeat;
     background-size: contain;
 }
 #homeh1 {
     height:250px;
+    padding-bottom:50px;
+}
+#logoimg {
+    height:200px;
+    width:250px;
+}
+#alert {
+    color:red;
 }
